Add honorInd
