# openapi.yaml
@@ -941,6 +941,10 @@ definitions:
                 description: The program classification of the major
                 type: string
                 example: Spanish Language & Literature
+          honorInd:
+            description: Determine if student is honor for this degree
+            type: boolean
+            example: true
   DualEnrollmentResult:
     properties:
       links:
